syntax = "proto3";

package product;

message ConsumeProductRequest {
    uint64 bank_account_id = 1;
    string product = 2;
}

message ConsumeProductResponse {
    enum Status {
        OK = 0;
        NOT_CONSUMABLE = 1;
        ALREADY_CONSUMED = 2;
        NOT_ENOUGH = 3;
    }

    Status status = 1;
}
